styles.css
body {
    display: flex;
    flex-direction: column;
    margin: 0;
    padding: 0;
}

.header {
    background-color: #1F2937;
    display: flex;
    justify-content: space-between;
    padding: 32px;
    align-items: center;
    padding-left: 10%;
    padding-right: 10%;
}

.logo {
    font-family: Helvetica, sans-serif;
    font-size: 24px;
    color: #F9FAF8;
}

ul {
    display: flex;
    list-style: none;
    margin: 0;
    padding: 0;
    gap: 16px;
}

a, .titleSignUp.subtext {
    text-decoration: none;
    font-family: Helvetica, sans-serif;
    font-size: 18px;
    color: #E5E7EB;
}

.bigText {
    font-family: Helvetica, sans-serif;
    font-weight: 900;
}

.subtext {
    font-family: Helvetica, sans-serif;
}

.signUpImg {
    background-color: #1F2937;
    display: flex;
    padding: 48px;
    align-items: center;
    justify-content: center;
    gap: 32px;
    padding-left: 10%;
    padding-right: 10%;
}

.titleSignUp {
    flex-wrap: wrap;
    display: flex;
    flex-direction: column;
    gap: 8px;
    flex-basis: 50%;
}

.titleSignUp>.bigText {
    color: #F9FAF8;
    font-size: 48px;
}

.titleSignUp>.subtext{
    color: #E5E7EB;
    font-size: 18px;
}

.buttonContainer>button {
    background-color: #3882F6;
    border: solid #3882F6;
    border-radius: 8px;
    font-family: Helvetica, sans-serif;
    color: #F9FAF8;
    padding: 8px 32px;
}

.signUpImg>img {
    min-width: 320px;
    min-height: 180px;
    flex-basis: 50%;
}

.infoImages {
    display: flex;
    flex-direction: column;
    gap: 48px;
    align-items: center;
    padding: 24px;
}

.infoImages>.bigText {
    font-size: 36px;
    color: #1F2937;
    font-weight: 900;
}

.imageCards {
    display: flex;
    justify-content: center;
    gap: 48px;
    padding-left: 20%;
    padding-right: 20%;
}

.card {
    display: flex;
    flex-direction: column;
    gap: 12px;
}

.card>img {
    min-height: 100px;
    min-width: 100px;
    border: solid #3882F6;
    border-radius: 12px;
    border-width: 4px;
    align-items: center;
    max-width: 200px;
}

.card>.subtext {
    text-align: center;
}

.quoteSection {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: #E5E7EB;
    padding: 5% 10%;
}

.quote {
    font-family: Helvetica, sans-serif;
    font-size: 36px;
    font-style: italic;
    font-weight: light;
    color: #1F2937;
}

.quotedBy {
    font-family: Helvetica, sans-serif;
    font-size: 18px;
    color: #1F2937;
    font-weight: 700;
    align-self: center;
}

.signUpBannerContainer {
    padding: 80px;
    padding-left: 160px;
    padding-right: 160px;
}

.signUpBanner {
    display: flex;
    background-color: #3882F6;
    border: #3882F6;
    padding: 48px;
    border-radius: 12px;
    justify-content: space-between;
}

.signUpBannerText {
    display: flex;
    flex-direction: column;
    gap: 16px;
    color: #F9FAF8;
}

#bannerSignUp {
    border: solid #F9FAF8;
    border-width: 2px;
    border-radius: 8px;
    background-color: #3882F6;
    color: #F9FAF8;
    padding: 8px 24px;
    align-self: center;
}

.footer {
    font-family: Helvetica, sans-serif;
    background-color: #1F2937;
    text-align: center;
    padding: 32px;
    color: #E5E7EB;
}

